[Menu.js] 메뉴판 버튼 구현 완료
- 메뉴판 버튼 구현 완료~
- 버튼 클릭 시 버튼 인덱스 = 메뉴 인덱스 되도록 조치중~

--- a/css/app.css
+++ b/css/app.css
@@ -13,9 +13,94 @@ body {
     display: none;
 }
 
-body img button{
+button:hover{
+    cursor: pointer;
+    filter: brightness(0.8);
+}
+
+.menuBtn0{
+    /* display: none; */
+    position: absolute;
+    margin-left: 85px;
+    margin-top: 275px;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
     font-family: "dgm";
-    height: 35px;
+    font-size: 23px;
+    text-align: center;
+}
+.menuBtn1{
+    /* display: none; */
+    position: absolute;
+    margin-left: 85px;
+    margin-top: 340px;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
+    font-family: "dgm";
+    font-size: 23px;
+    text-align: center;
+}
+.menuBtn2{
+    /* display: none; */
+    margin-left: 85px;
+    margin-top: 405px;
+    position: absolute;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
+    font-family: "dgm";
+    font-size: 23px;
+    text-align: center;
+}
+.menuBtn3{
+    /* display: none; */
+    margin-left: 85px;
+    margin-top: 470px;
+    position: absolute;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
+    font-family: "dgm";
+    font-size: 23px;
+    text-align: center;
+}
+.menuBtn4{
+    /* display: none; */
+    margin-left: 85px;
+    margin-top: 535px;
+    position: absolute;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
+    font-family: "dgm";
+    font-size: 23px;
+    text-align: center;
+}
+.menuBtn5{
+    /* display: none; */
+    margin-left: 85px;
+    margin-top: 600px;
+    position: absolute;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
+    font-family: "dgm";
+    font-size: 23px;
+    text-align: center;
+}
+.menuBtn6{
+    /* display: none; */
+    margin-left: 85px;
+    margin-top: 665px;
+    position: absolute;
+    display: none;
+    background-color: rgb(207, 207, 207);
+    height: 38px;
+    font-family: "dgm";
+    font-size: 23px;
+    text-align: center;
 }
 
 /* ■■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■■ */
