--- a/css/app.css
+++ b/css/app.css
@@ -106,6 +106,41 @@ button:hover{
     font-size: 23px;
     text-align: center;
 }
+/* Scene_9 : 평가 */
+.S9-input{
+    position:absolute;
+    margin-top: 580px;
+    margin-left: 430px;
+    text-align: center;
+    font-size: x-large;
+    width: 500px;
+    height: 50px;
+    border-color: black;
+    font-family: 'dgm';
+    font-size: 40px;
+}
+
+.S9-input::placeholder{
+    font-size: 30px;
+    color: #bbbbbb;
+}
+
+.S9-submit{
+    position: absolute;
+    font-family: 'dgm';
+    background-color: #F2D800;
+    font-size: 25px;
+    margin-top: 580px;
+    margin-left: 965px;
+    width: 80px;
+    height: 55px;
+}
+
+.S9-submit:hover{
+    cursor: pointer;
+    filter: brightness(0.8);
+}
+
 
 /* ■■■■■■■■■■■■■■■■■■■ 세영 ■■■■■■■■■■■■■■■■■■■ */
 #startbtn1{
