[afterGameCanvas.js] to Main || Ending 화면 수정중
- 버튼 삽입 중 : CSS 만져야 함

--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,13 @@ body {
     display: none;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    /* display: none; */
+}
+
 button:hover{
     cursor: pointer;
     filter: brightness(0.8);
@@ -139,6 +146,10 @@ button:hover{
 .S9-submit:hover{
     cursor: pointer;
     filter: brightness(0.8);
+}
+
+.AG-S17-btnToMain{
+    
 }
 
 
