--- a/css/app.css
+++ b/css/app.css
@@ -17,11 +17,10 @@ button{
     background-color: transparent;
     border: none;
     margin: 0;
-    /* display: none; */
+    display: none;
 }
 
 button:hover{
-    cursor: pointer;
     filter: brightness(0.8);
 }
 
@@ -144,11 +143,18 @@ button:hover{
 }
 
 .S9-submit:hover{
-    cursor: pointer;
     filter: brightness(0.8);
 }
 
 .AG-S17-btnToMain{
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 275px;
+}
+.AG-S17-btnToEnding{
+    position: absolute;
+    margin-top: 350px;
+    margin-left: 275px;
     
 }
 
