[현채] app.js만 수정하면 됨

--- a/css/app.css
+++ b/css/app.css
@@ -13,8 +13,14 @@ body {
     display: none;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    display: none;
+}
+
 button:hover{
-    cursor: pointer;
     filter: brightness(0.8);
 }
 
@@ -137,8 +143,19 @@ button:hover{
 }
 
 .S9-submit:hover{
-    cursor: pointer;
     filter: brightness(0.8);
+}
+
+.AG-S17-btnToMain{
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 275px;
+}
+.AG-S17-btnToEnding{
+    position: absolute;
+    margin-top: 350px;
+    margin-left: 275px;
+    
 }
 
 
