세영+예진통합 클릭연결문제해결중

--- a/css/app.css
+++ b/css/app.css
@@ -531,7 +531,7 @@ body {
 }
 #nextbtn {
   display: none;
-  pointer-events: none;
+  /* pointer-events: none; */
   position: absolute;
   left: 900px;
   top: 758px;
